# blvm-workspace

./: .editorconfig  .gitmodules  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SUBMODULES.md
.cargo/: config.toml
.github/workflows/: validate.yml
scripts/: cargo-in.sh  doctor.sh  help.sh  init-all.sh  init-core.sh  init-minimal.sh  link-existing.sh  status.sh  update-submodules.sh
scripts/lib/: common.sh
